# hydraulic-erosion

./: .gitignore  CMakeLists.txt  README.md
kernel/: vector_addition.cl
src/: hydraulic_erosion.cpp  kernel_loader.cpp  kernel_loader.h  kernel_loader.ipp
